crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslint_config_packagejson.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint
```

## `biome.json`

```json
{ "linter": { "enabled": true } }
```

## `package.json`

```json
{
        "name": "foo",
        "version": "0.0.0",
        "eslintConfig": {
            "rules": {
                "eqeqeq": "warn"
            }
        },
        "eslintIgnore": ["/dist", "test", "!test/x/**"]
    }
```

# Emitted Messages

```block
biome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1   │ - {·"linter":·{·"enabled":·true·}·}
      1 │ + {
      2 │ + → "linter":·{
      3 │ + → → "enabled":·true,
      4 │ + → → "rules":·{·"preset":·"none",·"suspicious":·{·"noDoubleEquals":·"warn"·}·},
      5 │ + → → "includes":·["**",·"dist",·"**/test",·"!test/x/**"]
      6 │ + → }
      7 │ + }
      8 │ + 
  

```

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 1 ESLint rules found
    - 1 can be migrated to Biome's rules (run with --write to migrate)
    - 100% (1) of your ESLint rules are fully covered by Biome
      - 100% (1) via direct migration to Biome rules
  
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ biome migrate --write
  

```
