crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslint_flat_unsupported.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{}
```

## `./eslint.config.js`

```js

```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: ESlint flat configuration format is not supported yet.
  


```
