crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslintrcjson_donot_override_existing_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{ "linter": { "rules": { "suspicious": { "noDoubleEquals": "error" } } } }
```

## `.eslintrc.json`

```json
{ "rules": { "eqeqeq": "off" } }
```

# Emitted Messages

```block
biome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1   │ - {·"linter":·{·"rules":·{·"suspicious":·{·"noDoubleEquals":·"error"·}·}·}·}
      1 │ + {·"linter":·{·"rules":·{·"suspicious":·{·"noDoubleEquals":·"error"·}·}·}·}
      2 │ + 
  

```

```block
Run the command with the option --write to apply the changes.
```
