crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslintrcjson_exclude_inspired.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint
```

## `biome.json`

```json
{}
```

## `.eslintrc.json`

```json
{ "rules": { "no-else-return": "error" } }
```

# Emitted Messages

```block
biome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1   │ - {}
      1 │ + {·"linter":·{·"rules":·{·"preset":·"none"·}·}·}
      2 │ + 
  

```

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 1 ESLint rules found
    - 0 can be migrated to Biome's rules (run with --write to migrate)
      - +1 with --include-inspired
    - 100% (1) of your ESLint rules are fully covered by Biome
      - 0% (0) via direct migration to Biome rules
  
  
  i Rules that can be migrated to an inspired rule using --include-inspired:
  
  - no-else-return
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ biome migrate --write
  

```
