crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslintrcjson_extended_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint
```

## `biome.json`

```json
{ "linter": { "enabled": true } }
```

## `.eslintrc.json`

```json
{
        "rules": {
            "dot-notation": 0,
            "@typescript-eslint/dot-notation": 2,
            "@typescript-eslint/no-dupe-class-members": 2,
            "no-dupe-class-members": 0
        }
    }
```

# Emitted Messages

```block
biome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1    │ - {·"linter":·{·"enabled":·true·}·}
       1 │ + {
       2 │ + → "linter":·{
       3 │ + → → "enabled":·true,
       4 │ + → → "rules":·{
       5 │ + → → → "preset":·"none",
       6 │ + → → → "complexity":·{·"useLiteralKeys":·"error"·},
       7 │ + → → → "suspicious":·{·"noDuplicateClassMembers":·"error"·}
       8 │ + → → }
       9 │ + → }
      10 │ + }
      11 │ + 
  

```

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 4 ESLint rules found
    - 4 can be migrated to Biome's rules (run with --write to migrate)
    - 100% (4) of your ESLint rules are fully covered by Biome
      - 100% (4) via direct migration to Biome rules
  
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ biome migrate --write
  

```
